Tweak project JVM memory options